Remove notion of refs, parent, base_sha from task structure
This is a normalization now that we have the submission structure to
control all this.
