# ci-gen/grpc/types/task.pb.go
@@ -26,10 +26,11 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 // placed in them. Each task is decomposed into runs, and this record is
 // created indicating the group of them, as well as properties they share.
 type Task struct {
-	Id                   int64                `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
-	Parent               *Repository          `protobuf:"bytes,2,opt,name=parent,proto3" json:"parent,omitempty"`
-	Ref                  *Ref                 `protobuf:"bytes,3,opt,name=ref,proto3" json:"ref,omitempty"`
-	BaseSHA              string               `protobuf:"bytes,4,opt,name=baseSHA,proto3" json:"baseSHA,omitempty"`
+	Id int64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	// XXX Fields that are no longer used
+	// types.Repository          parent        = 2; // Parent Repository
+	// types.Ref                 ref           = 3; // Associated Ref to be tested
+	// string                    baseSHA       = 4; // BaseSHA for diff
 	PullRequestID        int64                `protobuf:"varint,5,opt,name=pullRequestID,proto3" json:"pullRequestID,omitempty"`
 	Canceled             bool                 `protobuf:"varint,6,opt,name=canceled,proto3" json:"canceled,omitempty"`
 	FinishedAt           *timestamp.Timestamp `protobuf:"bytes,7,opt,name=finishedAt,proto3" json:"finishedAt,omitempty"`
@@ -76,27 +77,6 @@ func (m *Task) GetId() int64 {
 		return m.Id
 	}
 	return 0
-}
-
-func (m *Task) GetParent() *Repository {
-	if m != nil {
-		return m.Parent
-	}
-	return nil
-}
-
-func (m *Task) GetRef() *Ref {
-	if m != nil {
-		return m.Ref
-	}
-	return nil
-}
-
-func (m *Task) GetBaseSHA() string {
-	if m != nil {
-		return m.BaseSHA
-	}
-	return ""
 }
 
 func (m *Task) GetPullRequestID() int64 {
@@ -382,48 +362,45 @@ func init() {
 }
 
 var fileDescriptor_ca2db32a7ab25d95 = []byte{
-	// 676 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0x5d, 0x6f, 0xd3, 0x3c,
-	0x14, 0x56, 0x3f, 0xd7, 0x9c, 0xee, 0xe3, 0x7d, 0xfd, 0x4a, 0x2f, 0x56, 0x35, 0xa6, 0x52, 0x21,
-	0x54, 0x2e, 0x96, 0x68, 0x9b, 0x10, 0xd3, 0x90, 0x10, 0xe3, 0x43, 0x62, 0x82, 0x0b, 0x70, 0x77,
-	0xc5, 0x0d, 0x72, 0x13, 0x37, 0xb3, 0x9a, 0x38, 0x21, 0x3e, 0x1e, 0xea, 0xef, 0xe1, 0x9a, 0xff,
-	0x88, 0xe2, 0xba, 0x69, 0xca, 0x90, 0xa6, 0x72, 0x95, 0xe3, 0xc7, 0xcf, 0xe3, 0x9c, 0xf3, 0x9c,
-	0x63, 0xc3, 0x79, 0x2c, 0xf1, 0xc6, 0x4c, 0xfd, 0x30, 0x4b, 0x03, 0x94, 0x6a, 0x11, 0xca, 0x20,
-	0x94, 0xc7, 0x3c, 0x16, 0x0a, 0x75, 0x19, 0xc5, 0x42, 0x05, 0x71, 0x91, 0x87, 0x01, 0x2e, 0x72,
-	0xa1, 0x03, 0xe4, 0x7a, 0xee, 0xe7, 0x45, 0x86, 0x19, 0xe9, 0x58, 0x64, 0xf0, 0xa2, 0x76, 0x40,
-	0x9c, 0x25, 0x5c, 0xc5, 0x81, 0xdd, 0x9f, 0x9a, 0x59, 0x90, 0x3b, 0x91, 0x4c, 0x85, 0x46, 0x9e,
-	0xe6, 0xeb, 0x68, 0x79, 0xc6, 0xe0, 0xd9, 0xfd, 0x62, 0x8d, 0x85, 0x09, 0xd1, 0x7d, 0x9c, 0xec,
-	0xe5, 0x76, 0x49, 0x17, 0x22, 0xcf, 0xb4, 0xc4, 0xac, 0x58, 0x38, 0xfd, 0xf3, 0x6d, 0xf5, 0x33,
-	0x27, 0x7c, 0xb5, 0xa5, 0xd0, 0xa8, 0xaf, 0x5a, 0x20, 0x4a, 0x15, 0xeb, 0xbf, 0x4b, 0x5d, 0x9b,
-	0x69, 0x2a, 0xb5, 0x96, 0x99, 0x5a, 0xea, 0x47, 0x3f, 0xdb, 0xd0, 0xbe, 0xe6, 0x7a, 0x4e, 0xf6,
-	0xa1, 0x29, 0x23, 0xda, 0x18, 0x36, 0xc6, 0x2d, 0xd6, 0x94, 0x11, 0x79, 0x0a, 0xdd, 0x9c, 0x17,
-	0x42, 0x21, 0x6d, 0x0e, 0x1b, 0xe3, 0xfe, 0xe9, 0xbf, 0xbe, 0x3d, 0xc1, 0x67, 0x55, 0xf1, 0xcc,
-	0x11, 0xc8, 0x21, 0xb4, 0x0a, 0x31, 0xa3, 0x2d, 0xcb, 0x83, 0x8a, 0x37, 0x63, 0x25, 0x4c, 0x28,
-	0xec, 0x4c, 0xb9, 0x16, 0x93, 0xf7, 0x97, 0xb4, 0x3d, 0x6c, 0x8c, 0x3d, 0xb6, 0x5a, 0x92, 0xc7,
-	0xb0, 0x97, 0x9b, 0x24, 0x61, 0xe2, 0x9b, 0x11, 0x1a, 0xaf, 0xde, 0xd2, 0x8e, 0xfd, 0xfb, 0x26,
-	0x48, 0x06, 0xd0, 0x0b, 0xb9, 0x0a, 0x45, 0x22, 0x22, 0xda, 0x1d, 0x36, 0xc6, 0x3d, 0x56, 0xad,
-	0xc9, 0x05, 0xc0, 0x4c, 0x2a, 0xa9, 0x6f, 0x44, 0x74, 0x89, 0x74, 0xc7, 0x26, 0x30, 0xf0, 0xe3,
-	0x2c, 0x8b, 0x13, 0xe1, 0xaf, 0x3a, 0xef, 0x5f, 0xaf, 0xa6, 0x84, 0xd5, 0xd8, 0xe4, 0x1c, 0xbc,
-	0xb0, 0x10, 0x1c, 0xad, 0xb4, 0x77, 0xaf, 0x74, 0x4d, 0x2e, 0x95, 0x1a, 0x79, 0xb1, 0x54, 0x7a,
-	0xf7, 0x2b, 0x2b, 0x32, 0xf9, 0x1f, 0xba, 0x1a, 0x39, 0x1a, 0x4d, 0xc1, 0x56, 0xe2, 0x56, 0xe4,
-	0xd0, 0x9e, 0x88, 0x46, 0x4f, 0x04, 0xd2, 0xbe, 0xdd, 0x5a, 0x03, 0x24, 0x80, 0xde, 0xaa, 0xeb,
-	0x74, 0xd7, 0xfe, 0xee, 0x3f, 0x67, 0x72, 0xd9, 0xb9, 0x89, 0xdb, 0x62, 0x15, 0x89, 0x10, 0x68,
-	0xe7, 0x1c, 0x6f, 0xe8, 0x9e, 0xf5, 0xdb, 0xc6, 0x25, 0x56, 0x18, 0xa5, 0xe9, 0xbe, 0xf5, 0xd8,
-	0xc6, 0xe4, 0x04, 0x60, 0x3d, 0x10, 0xf4, 0x60, 0xa3, 0xcf, 0x93, 0x6a, 0x83, 0xd5, 0x48, 0xa3,
-	0x1f, 0x2d, 0xd8, 0xad, 0xff, 0x95, 0x1c, 0x01, 0xa4, 0x99, 0x51, 0x98, 0x67, 0x52, 0xa1, 0x9d,
-	0x1f, 0x8f, 0xd5, 0x10, 0xf2, 0x0f, 0xb4, 0x84, 0xba, 0xa5, 0xcd, 0x61, 0x6b, 0xec, 0xb1, 0x32,
-	0x2c, 0x07, 0xe2, 0x7b, 0x56, 0xcc, 0x23, 0x59, 0xd8, 0x91, 0xf1, 0xd8, 0x6a, 0x49, 0x4e, 0x5c,
-	0x8e, 0xed, 0x61, 0x6b, 0xdc, 0x3f, 0x7d, 0xf8, 0x87, 0x22, 0x7d, 0x66, 0x94, 0x7e, 0xa7, 0xb0,
-	0x58, 0xb8, 0x12, 0x9e, 0xc0, 0x7e, 0x24, 0x66, 0xdc, 0x24, 0x58, 0x1a, 0x9e, 0x19, 0x74, 0x43,
-	0xf4, 0x1b, 0x4a, 0x46, 0xb0, 0xeb, 0x90, 0xcf, 0x46, 0x18, 0x61, 0x27, 0xc9, 0x63, 0x1b, 0x58,
-	0x8d, 0x73, 0x95, 0xf2, 0x58, 0xd8, 0x79, 0x5a, 0x73, 0x2c, 0x46, 0xce, 0xa0, 0x97, 0x0a, 0xe4,
-	0x11, 0x47, 0xee, 0x86, 0xe6, 0xc1, 0x9d, 0xd6, 0x4f, 0xec, 0xdb, 0xc2, 0x2a, 0xe2, 0xf2, 0xe0,
-	0x5c, 0xa8, 0x48, 0xa8, 0x50, 0x0a, 0x4d, 0x3d, 0x6b, 0xc6, 0x06, 0x36, 0xf8, 0x00, 0x5e, 0x55,
-	0x5b, 0x69, 0xda, 0x5c, 0x2c, 0x9c, 0x9b, 0x65, 0x48, 0xc6, 0xd0, 0xb9, 0xe5, 0x89, 0x11, 0xee,
-	0x36, 0x92, 0xd5, 0x2d, 0x33, 0xaa, 0xea, 0xff, 0x92, 0x70, 0xd1, 0x3c, 0x6f, 0x8c, 0x8e, 0xa1,
-	0x57, 0xba, 0xf6, 0x51, 0x6a, 0x24, 0x8f, 0xa0, 0x53, 0xc6, 0x9a, 0x36, 0xac, 0xab, 0xfd, 0x9a,
-	0xab, 0x6c, 0xb9, 0x33, 0xba, 0x84, 0x83, 0x37, 0xf6, 0x4a, 0x7d, 0x62, 0xee, 0xde, 0xdd, 0x79,
-	0x0e, 0x8e, 0x00, 0xd6, 0xcf, 0x9e, 0x4d, 0xc2, 0x63, 0x35, 0xe4, 0x75, 0xf0, 0xe5, 0x78, 0xab,
-	0x97, 0x68, 0xda, 0xb5, 0x76, 0x9d, 0xfd, 0x0a, 0x00, 0x00, 0xff, 0xff, 0x4b, 0xe3, 0xf0, 0x96,
-	0x31, 0x06, 0x00, 0x00,
+	// 632 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0x5f, 0x6f, 0xd3, 0x3e,
+	0x14, 0x55, 0x9b, 0x75, 0x6b, 0x6e, 0xf7, 0xe7, 0xf7, 0x33, 0x12, 0x58, 0x15, 0x4c, 0xa5, 0x42,
+	0x28, 0x2f, 0x4b, 0xb4, 0x4d, 0x88, 0x69, 0x48, 0x88, 0xf1, 0xe7, 0x61, 0x82, 0x07, 0x70, 0xf7,
+	0xc4, 0x0b, 0x72, 0x13, 0x37, 0xb3, 0x9a, 0x38, 0x21, 0xbe, 0x1e, 0xea, 0xe7, 0xe1, 0xdb, 0xf0,
+	0xa9, 0x50, 0x5c, 0x37, 0xcd, 0x18, 0xd2, 0x54, 0x9e, 0x72, 0x7d, 0xee, 0x39, 0xd7, 0xf6, 0xb9,
+	0xbe, 0x81, 0xb3, 0x54, 0xe2, 0xb5, 0x99, 0x86, 0x71, 0x91, 0x47, 0x28, 0xd5, 0x22, 0x96, 0x51,
+	0x2c, 0x8f, 0x78, 0x2a, 0x14, 0xea, 0x3a, 0x4a, 0x85, 0x8a, 0xd2, 0xaa, 0x8c, 0x23, 0x5c, 0x94,
+	0x42, 0x47, 0xc8, 0xf5, 0x3c, 0x2c, 0xab, 0x02, 0x0b, 0xd2, 0xb3, 0xc8, 0xf0, 0x55, 0xab, 0x40,
+	0x5a, 0x64, 0x5c, 0xa5, 0x91, 0xcd, 0x4f, 0xcd, 0x2c, 0x2a, 0x9d, 0x48, 0xe6, 0x42, 0x23, 0xcf,
+	0xcb, 0x75, 0xb4, 0xac, 0x31, 0x7c, 0x71, 0xbf, 0x58, 0x63, 0x65, 0x62, 0x74, 0x1f, 0x27, 0x7b,
+	0xbd, 0xd9, 0xa1, 0x2b, 0x51, 0x16, 0x5a, 0x62, 0x51, 0x2d, 0x9c, 0xfe, 0xe5, 0xa6, 0xfa, 0x99,
+	0x13, 0xbe, 0xd9, 0x50, 0x68, 0xd4, 0x37, 0x2d, 0x10, 0xa5, 0x4a, 0xf5, 0xbf, 0x1d, 0x5d, 0x9b,
+	0x69, 0x2e, 0xb5, 0x96, 0x85, 0x5a, 0xea, 0xc7, 0xbf, 0x3c, 0xd8, 0xba, 0xe2, 0x7a, 0x4e, 0xf6,
+	0xa1, 0x2b, 0x13, 0xda, 0x19, 0x75, 0x02, 0x8f, 0x75, 0x65, 0x42, 0x9e, 0xc1, 0x5e, 0x69, 0xb2,
+	0x8c, 0x89, 0xef, 0x46, 0x68, 0xbc, 0x7c, 0x4f, 0x7b, 0x36, 0x75, 0x1b, 0x24, 0x43, 0xe8, 0xc7,
+	0x5c, 0xc5, 0x22, 0x13, 0x09, 0xdd, 0x1e, 0x75, 0x82, 0x3e, 0x6b, 0xd6, 0xe4, 0x1c, 0x60, 0x26,
+	0x95, 0xd4, 0xd7, 0x22, 0xb9, 0x40, 0xba, 0x33, 0xea, 0x04, 0x83, 0x93, 0x61, 0x98, 0x16, 0x45,
+	0x9a, 0x89, 0x70, 0xd5, 0x96, 0xf0, 0x6a, 0xd5, 0x42, 0xd6, 0x62, 0x93, 0x33, 0xf0, 0xe3, 0x4a,
+	0x70, 0xb4, 0xd2, 0xfe, 0xbd, 0xd2, 0x35, 0xb9, 0x56, 0x6a, 0xe4, 0xd5, 0x52, 0xe9, 0xdf, 0xaf,
+	0x6c, 0xc8, 0xe4, 0x21, 0x6c, 0x6b, 0xe4, 0x68, 0x34, 0x05, 0x7b, 0x13, 0xb7, 0x22, 0x8f, 0x6d,
+	0x45, 0x34, 0x7a, 0x22, 0x90, 0x0e, 0x6c, 0x6a, 0x0d, 0x90, 0x08, 0xfa, 0xab, 0x96, 0xd0, 0x5d,
+	0xbb, 0xdd, 0x83, 0xd0, 0x7a, 0x1d, 0xd6, 0xb6, 0x4e, 0x5c, 0x8a, 0x35, 0x24, 0x42, 0x60, 0xab,
+	0xe4, 0x78, 0x4d, 0xf7, 0x46, 0x9d, 0xc0, 0x67, 0x36, 0xae, 0xb1, 0xca, 0x28, 0x4d, 0xf7, 0xad,
+	0xc7, 0x36, 0x26, 0xc7, 0x00, 0xeb, 0x6e, 0xd1, 0x03, 0x5b, 0xfa, 0x7f, 0x57, 0x7a, 0xd2, 0x24,
+	0x58, 0x8b, 0x34, 0xfe, 0xe9, 0xc1, 0x6e, 0x7b, 0x57, 0x72, 0x08, 0x90, 0x17, 0x46, 0x61, 0x59,
+	0x48, 0x85, 0xb6, 0xb9, 0x3e, 0x6b, 0x21, 0xe4, 0x3f, 0xf0, 0x84, 0xba, 0xa1, 0xdd, 0x91, 0x17,
+	0xf8, 0xac, 0x0e, 0x09, 0x85, 0x9d, 0x1f, 0x45, 0x35, 0x4f, 0x64, 0x45, 0x3d, 0x4b, 0x5f, 0x2d,
+	0xc9, 0xb1, 0x3b, 0xe3, 0xd6, 0xc8, 0x0b, 0x06, 0x27, 0x4f, 0xfe, 0x72, 0xc9, 0x90, 0x19, 0xa5,
+	0x3f, 0x28, 0xac, 0x16, 0xee, 0x0a, 0xcf, 0x61, 0x3f, 0x11, 0x33, 0x6e, 0x32, 0xac, 0x0d, 0x2f,
+	0x0c, 0xba, 0x47, 0xf4, 0x07, 0x4a, 0xc6, 0xb0, 0xeb, 0x90, 0x2f, 0x46, 0x18, 0x61, 0x5f, 0x92,
+	0xcf, 0x6e, 0x61, 0x2d, 0xce, 0x65, 0xce, 0x53, 0x61, 0xdf, 0xd3, 0x9a, 0x63, 0x31, 0x72, 0x0a,
+	0xfd, 0x5c, 0x20, 0x4f, 0x38, 0x72, 0xf7, 0x68, 0x1e, 0xdd, 0x69, 0xfd, 0xc4, 0x0e, 0x3e, 0x6b,
+	0x88, 0xcb, 0xc2, 0xa5, 0x50, 0x89, 0x50, 0xb1, 0x14, 0x9a, 0xfa, 0xd6, 0x8c, 0x5b, 0xd8, 0xf0,
+	0x23, 0xf8, 0xcd, 0xdd, 0x6a, 0xd3, 0xe6, 0x62, 0xe1, 0xdc, 0xac, 0x43, 0x12, 0x40, 0xef, 0x86,
+	0x67, 0x46, 0xd0, 0xae, 0xdd, 0x94, 0x38, 0x6f, 0x98, 0x51, 0x4d, 0xff, 0x97, 0x84, 0xf3, 0xee,
+	0x59, 0x67, 0x7c, 0x04, 0xfd, 0xda, 0xb5, 0x4f, 0x52, 0x23, 0x79, 0x0a, 0xbd, 0x3a, 0xd6, 0xb4,
+	0x63, 0x5d, 0x1d, 0xb4, 0x5c, 0x65, 0xcb, 0xcc, 0xf8, 0x02, 0x0e, 0xde, 0xd9, 0x91, 0xfa, 0xcc,
+	0xdc, 0xdc, 0xdd, 0x99, 0xd5, 0x43, 0x80, 0xf5, 0x3f, 0xc9, 0x1e, 0xc2, 0x67, 0x2d, 0xe4, 0x6d,
+	0xf4, 0xf5, 0x68, 0xa3, 0xdf, 0xc4, 0x74, 0xdb, 0xda, 0x75, 0xfa, 0x3b, 0x00, 0x00, 0xff, 0xff,
+	0x32, 0xd3, 0xa2, 0x72, 0xce, 0x05, 0x00, 0x00,
 }
